--- a/doc/references.bib
+++ b/doc/references.bib
@@ -35,3 +35,75 @@
   howpublished       = {\url{https://web.dev/vitals/}},
   note      = "Accessed: 15.01.2026"
 }
+
+@misc{ECMAScript_6,
+  author    = "{ECMA International}",
+  title     = "{ECMAScript 2015 Language Specification}",
+  howpublished       = {\url{https://262.ecma-international.org/6.0/}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{TypeScript_Official,
+  author    = "{Microsoft}",
+  title     = "{TypeScript: JavaScript with syntax for types}",
+  howpublished       = {\url{https://www.typescriptlang.org/}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{React_Official,
+  author    = "{Meta Open Source}",
+  title     = "{React: The library for web and native user interfaces}",
+  howpublished       = {\url{https://react.dev/}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{Vite_Official,
+  author    = "{Vite Team}",
+  title     = "{Vite: Next Generation Frontend Tooling}",
+  howpublished       = {\url{https://vitejs.dev/}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{Tailwind_Official,
+  author    = "{Tailwind Labs}",
+  title     = "{Tailwind CSS: Rapidly build modern websites without ever leaving your HTML}",
+  howpublished       = {\url{https://tailwindcss.com/}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{Chrome_DevTools_Perf,
+  author    = "{Google}",
+  title     = "{Analyze runtime performance - Chrome DevTools}",
+  howpublished       = {\url{https://developer.chrome.com/docs/devtools/performance}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@book{React_Up_Running,
+  author    = "{Stoyan Stefanov}",
+  title     = "{React: Up \& Running: Building Web Applications}",
+  year      = "2021",
+  publisher = "{O'Reilly Media}",
+  edition   = "2nd"
+}
+
+@book{Angular_Development,
+  author    = "{Yakov Fain, Anton Moiseev}",
+  title     = "{Angular Development with TypeScript}",
+  year      = "2018",
+  publisher = "{Manning Publications}",
+  edition   = "2nd"
+}
+
+@misc{MDN_JS,
+  author    = "{MDN Web Docs}",
+  title     = "{JavaScript — Dynamic client-side scripting}",
+  howpublished       = {\url{https://developer.mozilla.org/en-US/docs/Learn/JavaScript}},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{SPA_Definition,
+  author    = "{MDN Web Docs}",
+  title     = "{SPA (Single-page application)}",
+  howpublished       = {\url{https://developer.mozilla.org/en-US/docs/Glossary/SPA}},
+  note      = "Accessed: 12.01.2026"
+}
